# vector-field-analysis

./: .env.example  .gitignore  .mise.toml  CMakeLists.txt  Makefile  README.md  run-on-fedora.md
.github/workflows/: ci.yml
bins/: README.md
bins/analyzer/: CMakeLists.txt  README.md
bins/analyzer/configs/: all.toml  default.toml  mpi.toml  openmp.toml  pthreads.toml  sequential.toml
bins/analyzer/docs/: README.md  adding-a-solver.md  config-guide.md  pipeline.md
bins/analyzer/src/: README.md  analyzerConfig.hpp  analyzerConfigParser.cpp  analyzerConfigParser.hpp  configParser.cpp  cuda.cu  cuda.hpp  cudaFull.cu  cudaFull.hpp  cudaFullStreamlineSolver.cu  cudaFullStreamlineSolver.hpp  cudaStreamlineSolver.cu  fieldReader.cpp  main.cpp  mpiCPU.cpp  mpiCPU.hpp  mpiStreamlineSolver.cpp  openMP.cpp  openMP.hpp  openMpStreamlineSolver.cpp  pthreads.cpp  pthreads.hpp  pthreadsStreamlineSolver.cpp  runner.cpp  runner.hpp  sequentialCPU.cpp  sequentialCPU.hpp  sequentialStreamlineSolver.cpp  solverFactory.cpp  solverFactory.hpp  streamWriter.cpp  streamWriter.hpp  streamlineSolver.cpp  streamlineSolver.hpp  timing.cpp  timing.hpp  utils.hpp  vectorField.cpp  vectorField.h  vectorField.hpp
bins/analyzer/tests/: CMakeLists.txt  README.md  test_configParser.cpp  test_implementations.cpp  test_solverFactory.cpp  test_streamWriter.cpp  test_vectorfield.cpp
bins/simulator/: CMakeLists.txt  README.md
bins/simulator/configs/: README.md  dual_vortex.toml  noise.toml  source_sink.toml  spiral.toml  vortex.toml
bins/simulator/docs/: README.md
bins/simulator/src/: README.md  configParser.cpp  fieldGenerator.cpp  fieldGenerator.hpp  fieldWriter.cpp  main.cpp  simulatorConfig.hpp
bins/simulator/tests/: test_simulator.cpp
cmake/: Dependencies.cmake  README.md
configs/: README.md  karman_street_1000x1000.toml  karman_street_1024x1024.toml  karman_street_128x128.toml  karman_street_4096x4096.toml  source_grid_divergent_1024x1024.toml  source_grid_divergent_128x128.toml  source_grid_divergent_4096x4096.toml  vortex_1024x1024.toml  vortex_128x128.toml  vortex_2048x2048.toml  vortex_256x256.toml  vortex_4096x4096.toml  vortex_512x512.toml
docs/: README.md  dependencies.md  development.md
libs/: README.md
libs/field/src/: fieldTypes.hpp  grid.cpp  grid.hpp  streamline.cpp
libs/field/tests/: test_grid.cpp
libs/field_io/: CMakeLists.txt
libs/field_io/src/: fieldReader.cpp  fieldWriter.cpp  fieldWriter.hpp
libs/field_io/tests/: CMakeLists.txt
libs/vector/: README.md
libs/vector/docs/: README.md
libs/vector/src/: README.md  streamline.cpp  streamline.hpp  vector.cpp  vector.h  vector.hpp  vectorField.cpp
libs/vector/tests/: test_streamline.cpp  test_vector.cpp
report/: .gitignore  Makefile
report/sections/: introduction.tex  methodology.tex  results.tex
scripts/: CHPC.md  pipeline.sh  run_configs.sh  validate.sh
scripts/chpc/: README.md  benchmark.sh  check.sh  cpu-shell.sh  enqueue.sh  gpu-shell.sh  job.sh  logs.sh  monitor.sh  pipeline-job.sh  pipeline.sh  stop.sh  submit.sh
scripts/local/: login.sh  pipeline.sh  pull.sh  push.sh
src/: vector.cpp  vector.h  vectorField.cpp  vectorField.h
tools/: field_math.py  plot_runtimes.py  visualize.py
tools/runtime-data/: message.txt  runtimes.csv
